fix: Added flex-wrap

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .header {
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .footer {
@@ -40,6 +41,7 @@ body {
 
 ul {
     display: flex;
+    flex-wrap: wrap;
     gap: 16px;
     padding-right: 16px;
     font-size: 18px;
@@ -49,6 +51,8 @@ ul {
 .home {
     justify-content: center;
     align-items: center;
+    padding-bottom: 100px;
+    flex-wrap: wrap;
 }
 
 .home .home-text{
@@ -56,6 +60,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     padding: 16px;
+    margin: 12px;
 }
 
 .home .home-text h1 {
@@ -68,6 +73,8 @@ ul {
     font-size: 18px;
     margin: 8px;
     color: #e5e7eb;
+    width: 500px;
+    margin-bottom: 16px;
 }
 
 .home-btn button {
@@ -82,9 +89,19 @@ ul {
     
 }
 
+.home-img {
+    padding: 0;
+    margin: 12px;
+    display: block;
+}
+
 .home-img img{
-    width: 50%;
+    display: flex;
+    flex: 1;
+    max-width: 500px;
     height: auto;
+    margin-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 
